fixed timeline gaps issue

--- a/src/app/reports/timeline/timeline.component.css
+++ b/src/app/reports/timeline/timeline.component.css
@@ -111,7 +111,7 @@
 }
 
 .report_time {
-    position: relative;
+    /* position: relative; */
     z-index: 1;
 }
 
